Added auto completion for target degree. For that the Enum type for target degree has been replaced by java.util.String